--- a/html/css/style.css
+++ b/html/css/style.css
@@ -1,10 +1,12 @@
 body {
   max-width: 100vw;
-  max-height: 100vh;
+  height: 100vh;
   padding: 5%;
+  background: url("../images/background.jpg");
 }
 
 .checkout {
+  background-color: white;
   width: auto;
   border-top: 0.2px solid rgb(236, 236, 236);
   border-left: 0.2px solid rgb(236, 236, 236);
@@ -29,6 +31,7 @@ p {
 p > span {
   margin: 0em 0.3em;
 }
+
 .checkout__payment {
   font-weight: 600;
 }
@@ -55,6 +58,30 @@ content {
   width: 100%;
   display: flex;
 }
+
+.wallet {
+  padding: 2%;
+}
+
+.wallet__images {
+  display: flex;
+  justify-content: space-around;
+}
+
+.wallet__images div:hover {
+  background-color: rgb(236, 235, 235);
+}
+
+.wallet__images p {
+  margin-top: -6%;
+  margin-left: 5%;
+  font-size: smaller;
+}
+.wallet img {
+  padding: 5%;
+  width: 200px;
+}
+
 .checkout__payment-block {
   width: 60%;
   padding: 1%;
@@ -63,5 +90,103 @@ content {
 .checkout__cart-block {
   padding: 1%;
   width: 40%;
-  background-color: rgb(218, 218, 218);
+  background-color: rgb(240, 240, 240);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.products-img-details {
+  display: flex;
+  width: 100%;
+}
+
+.products-img-details img {
+  width: 10%;
+  margin-right: 3%;
+  border: 5px solid rgb(170, 170, 170);
+}
+
+.product-details {
+  flex: 1;
+}
+
+.product-details__name-price {
+  display: flex;
+  justify-content: space-between;
+  font-weight: 600;
+}
+
+.product-details__color-quantity {
+  margin-top: 2%;
+  font-size: smaller;
+}
+
+.total-block {
+  border-top: 1px solid rgb(146, 146, 146);
+  /* padding: 2%; */
+}
+
+.total-block div {
+  display: flex;
+  justify-content: space-between;
+  margin: 1%;
+}
+
+.total {
+  border-top: 1px solid rgb(146, 146, 146);
+  font-weight: 600;
+}
+
+.total span {
+  margin-top: 4%;
+}
+
+.new-card {
+  padding: 2%;
+}
+
+.new-card-form-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.new-card-form {
+  width: 100%;
+  max-width: 350px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.new-card-form input {
+  margin: 2%;
+  padding: 2%;
+  border: 1px solid rgb(207, 207, 207);
+  border-radius: 5px;
+  width: 80%;
+}
+
+.new-card__cvv {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.new-card__cvv input {
+  width: 36%;
+  font-size: smaller;
+}
+
+.new-card-form button {
+  margin-top: 7%;
+  width: 85%;
+  padding: 4%;
+  background-color: rgb(70, 204, 70);
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
