--- a/html/css/style.css
+++ b/html/css/style.css
@@ -1,13 +1,12 @@
 body {
   max-width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   padding: 5%;
   background: url("../images/background.jpg");
 }
 
-.checkout {
+.co {
   background-color: white;
-  width: auto;
   border-top: 0.2px solid rgb(236, 236, 236);
   border-left: 0.2px solid rgb(236, 236, 236);
   box-shadow: 4px 6px 5px rgb(182, 182, 182);
@@ -21,7 +20,7 @@ header {
   padding: 1%;
   position: relative;
 }
-.checkout__header__checkout {
+.co-header-co {
   font-weight: 700;
   margin-right: 10%;
 }
@@ -32,23 +31,23 @@ p > span {
   margin: 0em 0.3em;
 }
 
-.checkout__payment {
+.payment {
   font-weight: 600;
 }
 
-.checkout__payment:before,
-.checkout__payment:after {
+.payment:before,
+.payment:after {
   content: "/";
 }
 
-.checkout__payment:before {
+.payment:before {
   margin-right: 1em;
 }
-.checkout__payment:after {
+.payment:after {
   margin-left: 1em;
 }
 
-.checkout__close-btn {
+.co-close-btn {
   position: absolute;
   right: 1%;
   font-size: large;
@@ -58,42 +57,45 @@ content {
   width: 100%;
   display: flex;
 }
-
-.wallet {
-  padding: 2%;
-}
-
-.wallet__images {
-  display: flex;
-  justify-content: space-around;
-}
-
-.wallet__images div:hover {
-  background-color: rgb(236, 235, 235);
-}
-
-.wallet__images p {
-  margin-top: -6%;
-  margin-left: 5%;
-  font-size: smaller;
-}
-.wallet img {
-  padding: 5%;
-  width: 200px;
-}
-
-.checkout__payment-block {
-  width: 60%;
+.co-payment {
   padding: 1%;
+  flex: 3;
 }
 
-.checkout__cart-block {
+.co-cart {
   padding: 1%;
-  width: 40%;
+  flex: 2;
   background-color: rgb(240, 240, 240);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+
+.wallet-container {
+  padding: 2%;
+}
+
+.wallet-images {
+  display: flex;
+  justify-content: space-around;
+}
+
+.wallet_images div {
+  margin: 1%;
+}
+
+.wallet-images div:hover {
+  background-color: rgb(236, 235, 235);
+}
+
+.wallet-images p {
+  margin-top: -6%;
+  margin-left: 5%;
+  font-size: smaller;
+}
+.wallet-images img {
+  padding: 5%;
+  width: 90%;
 }
 
 .products-img-details {
@@ -111,23 +113,23 @@ content {
   flex: 1;
 }
 
-.product-details__name-price {
+.product-details-name-price {
   display: flex;
   justify-content: space-between;
   font-weight: 600;
 }
 
-.product-details__color-quantity {
+.product-details-color-quantity {
   margin-top: 2%;
   font-size: smaller;
 }
 
-.total-block {
+.total-container {
   border-top: 1px solid rgb(146, 146, 146);
   /* padding: 2%; */
 }
 
-.total-block div {
+.total-container div {
   display: flex;
   justify-content: space-between;
   margin: 1%;
@@ -169,13 +171,13 @@ content {
   width: 80%;
 }
 
-.new-card__cvv {
+.new-card-cvv {
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.new-card__cvv input {
+.new-card-cvv input {
   width: 36%;
   font-size: smaller;
 }
@@ -189,4 +191,64 @@ content {
   border: none;
   border-radius: 5px;
   cursor: pointer;
+}
+
+@media only screen and (max-width: 399px) {
+  .wallet-images {
+    flex-direction: column;
+  }
+  .wallet-images img {
+    width: 100%;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .co {
+    margin-left: 100px;
+    margin-right: 100px;
+  }
+
+  .co-payment {
+    flex: 3;
+  }
+
+  .co-cart {
+    flex: 2;
+  }
+}
+
+@media only screen and (max-width: 991px) {
+  .co {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  header p {
+    display: none;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .co-payment,
+  .co-cart {
+    width: 98%;
+    padding: 1%;
+  }
+}
+
+@media only screen and (max-height: 600px) {
+  content {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .co-payment {
+    flex: 1;
+    order: 2;
+  }
+
+  .co-cart {
+    flex: 1;
+    order: 1;
+  }
 }
